support Public IP proxy (#772)

--- a/config/node0.yaml
+++ b/config/node0.yaml
@@ -20,13 +20,18 @@ node: "node0"
 #use_tls: true
 location: "127.0.0.1"
 use_tls: false
-
 grpc_port: 50050
 
 #certificate:
 #  root_ca: "data/cert/ca.crt"
 #  key: "data/cert/node0.key"
 #  cert: "data/cert/node0.crt"
+
+# public_ip_proxy:
+#   mode: "grpc"
+#   ip:  "127.0.0.1"
+#   port: 30009
+#   use_tls: false
 
 proxy_server:
   mode: "grpc"
