--- a/config/node1.yaml
+++ b/config/node1.yaml
@@ -21,9 +21,13 @@ node: "node1"
 
 location: "127.0.0.1"
 use_tls: false
-
 grpc_port: 50051
 
+# public_ip_proxy:
+#   mode: "grpc"
+#   ip:  "127.0.0.1"
+#   port: 30004
+#   use_tls: false
 
 #certificate:
 #  root_ca: "data/cert/ca.crt"
