schedule node no need to parse party access info by dataset if it is added  from client (#773)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Install make
       run: brew install make
     - name: Install setuptools
-      run: python3 -m pip install setuptools
+      run: python3 -m pip install setuptools --break-system-packages
     - name: Change workspace file to github config
       run: ln -s -f WORKSPACE_GITHUB WORKSPACE
     - name: bazel test
