--- a/config/node2.yaml
+++ b/config/node2.yaml
@@ -24,11 +24,10 @@ use_tls: false
 
 grpc_port: 50052
 
-# public_ip_proxy:
-#   mode: "grpc"
-#   ip:  "127.0.0.1"
-#   port: 30008
-#   use_tls: false
+# certificate:
+#   root_ca: "data/cert/ca.crt"
+#   key: "data/cert/test.key"
+#   cert: "data/cert/test.crt"
 
 proxy_server:
   mode: "grpc"
