Update build configurations and documentation
- Fix Python linking options in BUILD.bazel
- Update Makefile to use linux_x86_64 config
- Simplify build_local.sh by removing mysql flag
- Update training data files with consistent format
- Add comprehensive build troubleshooting documentation
- Enhance logger utility with log rotation support
- Update copyright headers to use PrimiHub format
- Fix filesystem namespace compatibility for GCC < 9
- Conditionally compile Microsoft APSI PIR operators
- Add various utility improvements and bug fixes

--- a/src/primihub/kernel/pir/operator/BUILD
+++ b/src/primihub/kernel/pir/operator/BUILD
@@ -5,8 +5,10 @@ cc_library(
   deps = [
     "//src/primihub/kernel/pir:common_def",
     ":base_pir_operator",
-    ":keyword_pir_operator",
-  ]
+  ] + select({
+    "//:microsoft-apsi": [":keyword_pir_operator"],
+    "//conditions:default": [],
+  })
 )
 
 cc_library(
